# ansible-role-tripleo-ci

./: README.md  deploy.sh  requirements.txt  setup.cfg
defaults/: main.yml
handlers/: main.yml
playbooks/: deploy.yml
tasks/: ci.yml
templates/: ci.sh.j2
tests/: test.yml
vars/: main.yml
