[metadata]
name = tripleo-ci-role
summary = tripleo-ci-role
description-file =
    README.md
author = matbu
author-email = mbultel@redhat.com
home-page = https://github.com/matbu/ansible-tripleo-ci-role
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/local/share/ansible/roles/tripleo-ci/defaults = defaults/*
    usr/local/share/ansible/roles/tripleo-ci/handlers = handlers/*
    usr/local/share/ansible/roles/tripleo-ci/meta = meta/*
    usr/local/share/ansible/roles/tripleo-ci/tasks = tasks/*
    usr/local/share/ansible/roles/tripleo-ci/templates = templates/*
    usr/local/share/ansible/roles/tripleo-ci/tests = tests/*
    usr/local/share/ansible/roles/tripleo-ci/vars = vars/*
    playbooks = playbooks/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
